test/test_suite/errors/error_union.c3
module foo;

errtype Blurg;

func void main()
{
    anyerr foo;
}